@@ -7,6 +7,7 @@ Past developers:
   Tom Browder <tbrowder2@users.sourceforge.net>
 
 Other contributors:
+  Sergey Satskiy <sergey.satskiy@gmail.com>
   Vadim Zeitlin <vadim@tt-solutions.com>
   Tiziano Mueller <tiziano@users.sourceforge.net>
   Greg Chicares <gchicares@sbcglobal.net>
